--- a/packages/umi/pyproject.toml
+++ b/packages/umi/pyproject.toml
@@ -39,8 +39,8 @@ dependencies = [
     "loguru>=0.7.3",
 
     # PyTorch ecosystem
-    "torch==2.1.0",
-    "torchvision==0.16.0",
+    "torch>=2.6.0",
+    "torchvision>=0.21.0",
 
     # ML/AI frameworks
     "diffusers==0.18.2",
