--- a/packages/diffusion_policy/src/diffusion_policy/config/train_diffusion_unet_timm_umi_workspace_efficientnet_b3.yaml
+++ b/packages/diffusion_policy/src/diffusion_policy/config/train_diffusion_unet_timm_umi_workspace_efficientnet_b3.yaml
@@ -43,7 +43,7 @@ policy:
     # frozen: False
 
     ##### from scratch #####
-    model_name: 'vit_tiny_patch16_224'
+    model_name: 'efficientnet_b3'
     pretrained: True
     frozen: False
 
@@ -51,7 +51,7 @@ policy:
     global_pool: ''
 
     # 'avg' or 'max' or 'soft_attention' or 'spatial_embedding' or 'transformer' or 'attention_pool_2d'
-    feature_aggregation: 'attention_pool_2d'
+    feature_aggregation: 'avg'
     # feature_aggregation: null
     position_encording: 'sinusoidal' # 'learnable' or 'sinusoidal'. it only works for transformer
 
@@ -92,12 +92,13 @@ policy:
     share_rgb_model: False
     imagenet_norm: True
 
-  num_inference_steps: 16
+  num_inference_steps: 8
   obs_as_global_cond: True
   diffusion_step_embed_dim: 128
   # down_dims: [256,512,1024]
   # down_dims: [256, 512, 768]
-  down_dims: [128, 256, 192]
+  # down_dims: [512, 1024, 1536]
+  down_dims: [256, 512, 1024]  
 
   kernel_size: 5
   n_groups: 8
@@ -116,8 +117,8 @@ ema:
   max_value: 0.9999
 
 dataloader:
-  batch_size: 128
-  num_workers: 16
+  batch_size: 16
+  num_workers: 4
   shuffle: True
   pin_memory: True
   persistent_workers: True
@@ -156,8 +157,9 @@ training:
   debug: False
   resume: False
   # optimization
+  # lr_scheduler: cosine
   # lr_warmup_steps: 2000
-  num_epochs: 200
+  num_epochs: 120
   lr_scheduler: cosine
   lr_warmup_steps: 1000 # Reduced from 2000 to reach peak performance faster
   # gradient_accumulate_every: 1
