--- a/packages/diffusion_policy/src/diffusion_policy/config/train_diffusion_unet_timm_umi_workspace_swin_base.yaml
+++ b/packages/diffusion_policy/src/diffusion_policy/config/train_diffusion_unet_timm_umi_workspace_swin_base.yaml
@@ -43,7 +43,7 @@ policy:
     # frozen: False
 
     ##### from scratch #####
-    model_name: 'efficientnet_b3'
+    model_name: 'swin_base_patch4_window7_224.ms_in22k_ft_in1k'
     pretrained: True
     frozen: False
 
@@ -97,7 +97,8 @@ policy:
   diffusion_step_embed_dim: 128
   # down_dims: [256,512,1024]
   # down_dims: [256, 512, 768]
-  down_dims: [512, 1024, 1536]
+  # down_dims: [512, 1024, 1536]
+  down_dims: [512, 1024, 2048]
 
   kernel_size: 5
   n_groups: 8
@@ -116,8 +117,8 @@ ema:
   max_value: 0.9999
 
 dataloader:
-  batch_size: 64
-  num_workers: 12
+  batch_size: 32
+  num_workers: 8
   shuffle: True
   pin_memory: True
   persistent_workers: True
@@ -156,13 +157,13 @@ training:
   debug: False
   resume: False
   # optimization
-  lr_scheduler: cosine
+  # lr_scheduler: cosine
   # lr_warmup_steps: 2000
-  # num_epochs: 120
+  num_epochs: 150
   lr_scheduler: cosine
   lr_warmup_steps: 1000 # Reduced from 2000 to reach peak performance faster
   # gradient_accumulate_every: 1
-  gradient_accumulate_every: 8
+  gradient_accumulate_every: 2
   # EMA destroys performance when used with BatchNorm
   # replace BatchNorm with GroupNorm.
   use_ema: True
